samples/_failures_safe/1761043520_2c49f6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7ba3e032.c: In function ‘main’:
./samples/SAFE/__tmp_7ba3e032.c:134:34: error: ‘mat’ undeclared (first use in this function); did you mean ‘mat2’?
  134 |     if (!read_matrix_from_input(&mat
      |                                  ^~~
      |                                  mat2
./samples/SAFE/__tmp_7ba3e032.c:134:34: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_7ba3e032.c:134:37: error: expected ‘)’ at end of input
  134 |     if (!read_matrix_from_input(&mat
      |                                ~    ^
      |                                     )
./samples/SAFE/__tmp_7ba3e032.c:134:5: error: expected declaration or statement at end of input
  134 |     if (!read_matrix_from_input(&mat
      |     ^~
